# game-lab

./: .clang-format  .clang-tidy  .cmake-format  .cmake-format.json  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  main.cpp  travis.yml
include/datatypes/: CMakeLists.txt
include/datatypes/constants/: CMakeLists.txt
include/datatypes/controller/: CMakeLists.txt  Decision.h  MenuState.h
include/datatypes/entity/: Building.cpp  Building.h  CMakeLists.txt  Character.cpp  Consumable.cpp  Equippable.cpp  Equippable.h  Exterior.cpp  Exterior.h  Structure.cpp  Structure.h  Team.cpp
include/datatypes/entity-aux/: BuildingType.h  CMakeLists.txt  Ghost.h  ItemEffect.h  QuestType.h  Race.h  StructureType.h
include/datatypes/event/: CMakeLists.txt
include/datatypes/factory/: CMakeLists.txt  CreationSpecs.h  EquipmentType.h  StaffType.h  WeaponType.h
include/datatypes/logger/: CMakeLists.txt
include/datatypes/lookup/: CMakeLists.txt
include/interface/: CMakeLists.txt
include/interface/controller/: CMakeLists.txt  IDecisionChecker.h  IMenuHandler.h
include/interface/database/: CMakeLists.txt
include/interface/entity/: CMakeLists.txt  Entity.h  Item.h  Location.h
include/interface/graph/: CMakeLists.txt  IGraph.h  UndirectedGraph.h
include/interface/model/: CMakeLists.txt  ICleaner.h  IFactory.h  IHandler.h  ILookup.h
src/controller/handler/: Aesthetic.cpp  CMakeLists.txt  CombatHandler.cpp  CombatHandler.h  Controller.cpp  Controller.h  EntityHandler.cpp  EntityHandler.h  HiveMind.cpp  HiveMind.h  ItemHandler.cpp  ItemHandler.h  ShopHandler.cpp  TravelHandler.cpp  TravelHandler.h
src/controller/handler/include/: CMakeLists.txt  gamemath.cpp  gamemath.h
src/game/controller/: CMakeLists.txt  DecisionChecker.cpp  DecisionChecker.h  GameEngine.cpp  GameEngine.h  MenuHandler.cpp  MenuHandler.h  SnapshotUtilities.cpp  SnapshotUtilities.h
src/game/controller/brain/: CMakeLists.txt  ComputerBrain.cpp  ComputerBrain.h  IBrain.h  PlayerBrain.cpp  PlayerBrain.h
src/game/controller/brain-computer/: CMakeLists.txt  ComputerBrain.cpp  ComputerBrain.h
src/game/controller/brain-player/: CMakeLists.txt  PlayerBrain.cpp  PlayerBrain.h
src/game/controller/computer-brain/: ComputerBrain.cpp  ComputerBrain.h
src/game/controller/event/: CMakeLists.txt  Example.cpp  Example.h  GuessWhat.cpp  GuessWhat.h  Tutorial.cpp  Tutorial.h
src/game/controller/input/: CMakeLists.txt  Input.cpp  Input.h
src/game/controller/player-brain/: Attack.h  DropItem.h  Empty.h  IdleWorld.h  Shutdown.h  Walk.cpp
src/game/controller/state/: Attack.cpp  Attack.h  CMakeLists.txt  DropItem.cpp  DropItem.h  Empty.h  Example.h  GuessWhat.h  IdleWorld.cpp  IdleWorld.h  Shutdown.h  Start.h  Tutorial.cpp  Tutorial.h  UseItem.cpp  UseItem.h  Walk.cpp  Walk.h
src/game/model/handler/: Aesthetic.cpp  AestheticHandler.cpp  AttackHandler.cpp  CMakeLists.txt  CombatHandler.cpp  Controller.cpp  Controller.h  CreationHandler.cpp  DestructionHandler.cpp  Handler.cpp  Handler.h  InventoryHandler.cpp  ItemHandler.cpp  ShopHandler.cpp  TransferenceHandler.cpp  TravelHandler.cpp
src/include/datatypes/: CMakeLists.txt  GameTypes.h
src/include/datatypes/controller/: Action.h  ActionType.h  CMakeLists.txt  Decision.h  MenuState.h  PlayerState.h
src/include/datatypes/entity/: AttackType.h  Building.h  CMakeLists.txt  Character.cpp  Character.h  Consumable.cpp  Consumable.h  Equipable.cpp  Equippable.cpp  Equippable.h  Exterior.cpp  Info.h  ItemOwnership.h  ItemType.h  Occupation.h  Race.h  Stats.h  StatusEffect.h  Structure.cpp  Structure.h  Team.cpp  Team.h
src/include/datatypes/entity-aux/: AttackType.h  BuildingType.h  CMakeLists.txt  ConsumableType.h  EquippableType.h  EventType.h  Info.h  ItemEffect.h  Occupation.h  Stats.h  StatusEffect.h
src/include/datatypes/event/: CMakeLists.txt  Platform.h  (+1 more)
src/model/: CMakeLists.txt  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  World.cpp  World.h
src/model/cleaner/: CMakeLists.txt  Cleaner.cpp  Cleaner.h
src/model/entity/: CMakeLists.txt  Character.cpp  Character.h  Item.cpp  Item.h  Location.h  Property.h  Structure.cpp  Structure.h  UseType.h  Wallet.h  Weapon.cpp  Weapon.h
src/model/event/: CMakeLists.txt  IEvent.cpp  IEvent.h
src/model/factory/: CMakeLists.txt  CharacterFactory.cpp  CharacterFactory.h  EntityFactory.cpp  EntityFactory.h  Factory.cpp  Factory.h  ItemFactory.cpp  ItemFactory.h  LocationFactory.cpp  LocationFactory.h  StructureFactory.cpp  StructureFactory.h
src/model/handler/: Aesthetic.cpp  AttackHandler.cpp  CMakeLists.txt  CombatHandler.cpp  Controller.cpp  Controller.h  CreationHandler.cpp  DestructionHandler.cpp  EntityHandler.cpp  EntityHandler.h  Handler.cpp  HiveMind.h  InventoryHandler.cpp  ItemHandler.cpp  ItemHandler.h  ShopHandler.cpp  TransferenceHandler.cpp
src/model/lookup/: CMakeLists.txt  Lookup.cpp  Lookup.h
src/model/map/: CMakeLists.txt  Location.cpp  Location.h  LocationType.h  World.cpp  World.h  WorldMap.cpp  WorldMap.h
src/model/quest/: CMakeLists.txt  IQuest.cpp  IQuest.h
src/model/state/: Attack.cpp  Attack.h  CMakeLists.txt  Empty.cpp  Empty.h  Example.cpp  Example.h  IdleWorld.cpp  IdleWorld.h  RunWorld.cpp  RunWorld.h  Shutdown.cpp  Shutdown.h  Start.cpp  Start.h  StartWorld.cpp  StartWorld.h  Travel.cpp  Travel.h  Tutorial.cpp  Tutorial.h  UseItem.cpp  UseItem.h  Walk.cpp  Walk.h
src/model/strategy/: CMakeLists.txt  IStrategy.cpp  IStrategy.h
tests/characters/: CMakeLists.txt  unit_Character.cpp  unit_Player.cpp
tests/common/: CMakeLists.txt  unit_Inventory.cpp
tests/game/controller/: CMakeLists.txt  unit_DecisionChecker.cpp  unit_GameEngine.cpp  unit_SnapshotUtilities.cpp
tests/game/example/: CMakeLists.txt  unit_Test.cpp
tests/game/model/: CMakeLists.txt  unit_Cleaner.cpp  unit_Factory.cpp  unit_Handler.cpp  unit_Lookup.cpp  unit_Main.cpp
tests/libs/example/: CMakeLists.txt  unit_Example.cpp
tests/libs/graph/: CMakeLists.txt  constants.h  unit_DirectedGraph.cpp  unit_Graph.cpp  unit_UndirectedGraph.cpp
tests/utils/example/: CMakeLists.txt  unit_Example.cpp
(+419 files in other folders)
